[package]
name = "hello-wasip3-http"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = { git = "http://github.com/bytecodealliance/wit-bindgen" }
wit-bindgen-rt = { git = "http://github.com/bytecodealliance/wit-bindgen", features = ["async"] }

[features]
raw = []
